[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "govtechbench"
version = "1.0.0"
description = "Benchmark dataset and evaluation harness for AI on U.S. government document processing"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Rahul Raj", email = "eg13rahuliim@gmail.com" }]
keywords = ["benchmark", "government", "NLP", "AI", "unemployment-insurance", "workforce"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "datasets>=2.14.0",
    "pandas>=1.5.0",
    "pyarrow>=12.0.0",
    "scikit-learn>=1.3.0",
    "faker>=19.0.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "black>=23.0", "ruff>=0.1.0"]
baselines = ["transformers>=4.35.0", "torch>=2.0.0", "openai>=1.0.0", "anthropic>=0.20.0"]

[project.urls]
Homepage = "https://github.com/rahul12riim/govtech-bench"
"Hugging Face" = "https://huggingface.co/datasets/rahulraj/govtech-bench"
"Bug Tracker" = "https://github.com/rahul12riim/govtech-bench/issues"

[project.scripts]
govtechbench = "govtechbench.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["govtechbench*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
